# RusTokio

./: .architecture_progress  CODE_AUDIT_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  PLATFORM_INFO_RU.md  PROGRESS_TRACKER.md  README.md  RUSTOK_MANIFEST.md  RUSTON_MANIFEST.md  SPRINT_3_PROGRESS.md  SPRINT_4_PROGRESS.md  SPRINT_4_START.md  TASK_4.1_COMPLETION_SUMMARY.md  TESTING_PROGRESS.md  convert_logo.js  deny.toml  modules.toml  package-lock.json  package.json
.github/workflows/: ci.yml
DECISIONS/: 2026-02-19-module-kind-core-vs-optional.md  README.md
apps/admin/: Cargo.toml  README.md  index.html
apps/next-admin/: README.md  package.json
apps/next-frontend/: README.md  package.json
apps/server/: Cargo.toml
apps/storefront/: Cargo.toml  README.md
assets/: rustok-logo.avif
crates/leptos-auth/: Cargo.toml  README.md
crates/leptos-auth/docs/: quality-implementation-plan.md
crates/leptos-auth/src/: api.rs
crates/leptos-graphql/: Cargo.toml  README.md
crates/rustok-blog/: Cargo.toml
crates/rustok-commerce/: Cargo.toml
crates/rustok-content/: Cargo.toml
crates/rustok-core/: Cargo.toml
crates/rustok-iggy/: Cargo.toml  README.md
crates/rustok-index/: Cargo.toml
crates/rustok-mcp/: Cargo.toml  README.md
crates/rustok-order/: README.md
crates/rustok-page-builder/: rustok-module.toml
crates/rustok-pages/: Cargo.toml
crates/rustok-telemetry/: Cargo.toml
crates/rustok-test-utils/: Cargo.toml
crates/rustok-test-utils/docs/: quality-implementation-plan.md
crates/rustok-test-utils/src/: database.rs  fixtures.rs  lib.rs  mocks.rs  test_app.rs
docs/: CRITICAL_FIXES_CHECKLIST.md  DATABASE_SCHEMA.md  INTEGRATION_TESTING_GUIDE.md  METRICS_GUIDE.md  PERFORMANCE_BENCHMARKS_GUIDE.md  PLATFORM_VERIFICATION_PLAN.md  admin-migration-checklist.md  api-architecture.md  architecture.md  index.md  ui-parity.md
docs/UI/: ADMIN_DEVELOPMENT_PROGRESS.md  API_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LEPTOS_GRAPHQL_ENHANCEMENT.md  PHASE_1_STATUS.md  README.md  SPRINT_3_PROGRESS.md  TASK_COMPLETE_SUMMARY.md  (+8 more)
prometheus/: alert_rules.yml  prometheus.yml
rustok_mobile/: README.md
scripts/: auth_release_gate.sh  rbac_cutover_baseline.sh  rbac_cutover_gate.sh  rbac_relation_staging.sh
(+335 files in other folders)
