[package]
name = "rustok-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
rustok-core = { path = "../rustok-core" }
rustok-content = { path = "../rustok-content" }
rustok-commerce = { path = "../rustok-commerce" }

# Async runtime
tokio = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
migration = { path = "../../apps/server/migration" }

# HTTP
axum = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Testing
wiremock = "0.5"
testcontainers = "0.15"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
